# arm_tools-conan_cmsis5

./: CMakeLists.txt  README.md  cmsis.cmake  conanfile.py  make_packages.py
.stcproj/: CloneGit.cmake  conan_profile  conanfile.py  project_init.cmake
Test/: CMakeLists.txt  main.cpp
profiles/: armv7  linux_x86_64
